[package]
name = "robots"
version = "1.0.0"
authors = ["vedran <vinkovedran@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
